--- a/main.css
+++ b/main.css
@@ -55,10 +55,15 @@ body {
 .calendar .events > div {
 	position: absolute;
 	transform: translateX(10px);
+	min-width:0;
+	min-height:0;
 }
 
 .calendar .events > div:hover {
 	z-index: 100;
+	min-height: 60px;
+	min-width:300px;
+	transition: all 0.5s;
 }
 
 .calendar .events > div > div {
@@ -68,6 +73,10 @@ body {
 	border-left:5px solid #52AC89;
 	height: calc(100% - 21px);
 	overflow: hidden;
+}
+
+.calendar .events > div > div:hover {
+	box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
 }
 
 .calendar .events > div > div > * {
