--- a/main.css
+++ b/main.css
@@ -50,20 +50,18 @@ body {
 	margin-left: 100px;
 	background-color:#EBEBEB;
 	position: relative;
+	padding: 10px;
 }
 
 .calendar .events > div {
 	position: absolute;
 	transform: translateX(10px);
-	min-width:0;
-	min-height:0;
+	overflow: hidden;
+
 }
 
 .calendar .events > div:hover {
 	z-index: 100;
-	min-height: 60px;
-	min-width:300px;
-	transition: all 0.5s;
 }
 
 .calendar .events > div > div {
@@ -71,7 +69,7 @@ body {
 	background:white;
 	border:1px solid #D1D1D1;
 	border-left:5px solid #52AC89;
-	height: calc(100% - 21px);
+	height: calc(100% - 22px);
 	overflow: hidden;
 }
 
